# psudaemon

./: Dockerfile  Makefile  README.rst  pyproject.toml
conf/: psudaemon.yaml
monitoring/: json_exporter.yaml  prometheus.yaml  psudaemon-compose.yml
monitoring/grafana/dashboards/: psudaemon.json
monitoring/grafana/provisioning/datasources/: sources.yaml
psudaemon/: app.py  cli.py  client.py  context.py  helpers.py  types.py
psudaemon/psumodels/: __init__.py  common.py  e36300.yaml  e36300_series.py  external.py
psudaemon/routers/: monitoring.py  settings.py  units.py
tests/: test_psudaemon.py
