[tool.poetry]
name = "psudaemon"
version = "0.1.0"
description = ""
authors = ["Liam Beguin <liambeguin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.23"
fastapi = "^0.100"
pydantic = "^2.0"
pyvisa = "^1.13"
"ruamel.yaml" = "^0.17"
PyVISA-py = "^0.7.0"
PyVISA-sim = "^0.5.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
ruff = "*"

[tool.poetry.scripts]
psudaemon = "psudaemon.app:main"

[tool.ruff]
select = [
        "ALL",
        "D",    # pydocstyle
        "E",    # pycodestyl
        "W",    # pycodestyl
        "F",    # pyflake
        "I001", # isort
        "UP",
        "ERA",
        "COM",
]
extend-ignore = [
  "D100",
  "D300",
  "UP006",  # Use `list` instead of `List` for type annotation
  "UP007",  # Use `X | Y` for type annotations
  "TCH002", # Move third-party import `typing_extensions.Annotated` into a type-checking block
]

indent-width = 4
target-version = "py38"

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
lines-between-types = 1
order-by-type = true

[tool.ruff.flake8-quotes]
docstring-quotes = "single"
inline-quotes = "single"
multiline-quotes = "single"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
